--- a/index.html
+++ b/index.html
@@ -9,13 +9,121 @@
 </head>
 <body>
     <header>
-
+        <nav>
+            <button name="button"> <i class="fas fa-list"></i> </button>
+            <img src="img/logo.png">
+            <a href="#"> <i class="fas fa-search"></i> </a>
+        </nav>
     </header>
+    <section class="section">
+        <nav class="navegacion">
+            <ul>
+                <li><a href="#">Hoteles</a></li>
+                <li><a href="#">Alquileres de vacaciones</a></li>
+                <li><a href="#">Cosas que hacer</a></li>
+                <li><a href="#">Restaurantes</a></li>
+                <li><a href="#">Escribir una opinión</a></li>
+                <li><a href="#">Foros de viajes</a></li>
+                <li><a href="#">Más</a>
+                    <ul>
+                        <li><a href="#">Aerolíneas</a></li>
+                        <li><a href="#">Agregar un lugar</a></li>  
+                        <li><a href="#">Alquiler de autos</a></li>  
+                        <li><a href="#">Centro de ayuda</a></li>  
+                        <li><a href="#">Cruceros</a></li>  
+                        <li><a href="#">Paquetes de Vacaciones</a></li>  
+                        <li><a href="#">Travellers' Choice</a></li>  
+                        <li><a href="#">Vuelos </a></li>            
+                    </ul>
+                </li>    
+            </ul>
+        </nav>
+    </section>
     <main>
 
     </main>
     <footer>
-        
+        <div>
+            <ul>
+                <li><a href="#">Acerca de Tripadvisor</a>
+                    <ul>
+                        <li><a href="#">Quiénes somos</a></li>
+                        <li><a href="#">Prensa</a></li>           
+                        <li><a href="#">Recursos y políticas</a></li>           
+                        <li><a href="#">Integridad del contenido</a></li>           
+                    </ul>
+                </li>
+            </ul>
+            <ul>
+                <li><a href="#">Explorar</a>
+                    <ul>
+                        <li><a href="#">Centro de ayuda</a></li>           
+                    </ul>
+                </li>
+            </ul>
+            <ul>
+                <li><a href="#">Haz negocios con nosotros</a>
+                    <ul>
+                        <li><a href="#">Propietarios</a></li>
+                        <li><a href="#">Negocio Plus</a></li>           
+                        <li><a href="#">Ubicaciones Patrocinadas</a></li>           
+                        <li><a href="#">Anúnciate con nosotros</a></li>           
+                    </ul>
+                </li>
+            </ul>
+            <ul>
+                <li><a href="#">Obtén la aplicación</a>
+                    <ul>
+                        <li><a href="#">Aplicación para iPhone</a></li>    
+                        <li><a href="#">Aplicación para Android</a></li>           
+                    </ul>
+                </li>
+            </ul>
+            <ul>
+                <li><a href="#">Sitios de Tripadvisor</a>
+                    <ul>
+                        <li><a href="#">Reserva los mejores restaurantes en <b>TheFork</b></a></li>           
+                    </ul>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <select name="selectMoneda">
+                <option value="value1">$ MXN</option> 
+                <option value="value2">$ USD</option>
+                <option value="value3">$ GBP</option>
+                <option value="value4">$ EUR</option>
+                <option value="value5">$ CAD</option>
+            </select>
+            <select name="selectRegion">
+                <option value="value1">United States</option> 
+                <option value="value2">Canada (English)</option>
+                <option value="value1">Canada (français)</option> 
+                <option value="value2">Brasil</option>
+                <option value="value1" selected>México</option> 
+                <option value="value2">Argentina</option>
+                <option value="value1">Chile</option> 
+                <option value="value2">Colombia</option>
+                <option value="value1">Perú</option> 
+                <option value="value2">Venezuale</option>
+            </select>
+        </div>
+        <div>
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-instagram"></i>
+        </div>
+        <div>
+            <div>
+                <img src="img/logotipo.png">
+                <p>© 2020 TripAdvisor LLC Todos los derechos reservados.</p>
+                <a href="#">Condiciones de uso</a>
+                <a href="#">Declaración de privacidad y de cookies</a>
+                <a href="#">Mapa del sitio</a>
+                <a href="#">Cómo funciona el sitio</a>
+            </div>
+            <p>Esta es la versión de nuestro sitio web destinada a quienes hablen español en México. Si eres residente de otro país o región, selecciona la versión correcta de Tripadvisor para tu país o región en el menú desplegable. <a href="#">más</a></p>
+        </div>
     </footer>
 </body>
 </html>
