--- a/index.html
+++ b/index.html
@@ -9,13 +9,42 @@
 </head>
 <body>
     <header>
+        <button name="button"> <i class="fas fa-list"></i> </button>
         <nav>
-            <button name="button"> <i class="fas fa-list"></i> </button>
+            <a href="">Iniciar sesión</a>
+            <ul>
+                <li><a href="">Publicar</a>
+                    <ul>
+                        <li><a href="">Escribir una opinión</a></li>
+                        <li><a href="">Publicas fotos</a></li>
+                    </ul>
+                </li>
+                <li><a href="">Alertas</a></li>
+                <li><a href="">Viajes</a></li>
+                <li><a href="">Reservaciones</a></li>
+                <li><a href="">Hoteles</a></li>
+                <li><a href="">Qué hacer</a></li>
+                <li><a href="">Restaurantes</a></li>
+                <li><a href="">Vuelos</a></li>
+                <li><a href="">Rentas de vacaciones</a></li>
+                <li><a href="">Compras</a></li>
+                <li><a href="">Paquetes de Vacaciones</a></li>
+                <li><a href="">Cruceros</a></li>
+                <li><a href="">Alquiler de autos</a></li>
+                <li><a href="">Más </a>
+                    <ul>
+                        <li><a href="">Foro de viajes</a></li>
+                        <li><a href="">Aerolineas</a></li>
+                        <li><a href="">Lo mejor del 2020</a></li>
+                        <li><a href="">Centro de ayuda</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>    
             <img src="img/logo.png">
-            <a href="#"> <i class="fas fa-search"></i> </a>
-        </nav>
+            <a href="#"> <i class="fas fa-search"></i> </a>  
     </header>
-    <section class="section">
+    <main class="main">
         <nav class="navegacion">
             <ul>
                 <li><a href="#">Hoteles</a></li>
@@ -38,9 +67,19 @@
                 </li>    
             </ul>
         </nav>
-    </section>
-    <main>
-
+        <div>
+            <p>Descubre lo bueno que hay en el mundo.</p>
+            <div>
+                <input placeholder="¿A dónde?" name="bus" type="search">
+                <div class="icono">  
+                    <i class="fas fa-search"></i>
+                </div>
+            </div>
+            <div></div>
+        </div>
+        <div>
+            
+        </div>
     </main>
     <footer>
         <div>
