--- a/index.html
+++ b/index.html
@@ -75,10 +75,126 @@
                     <i class="fas fa-search"></i>
                 </div>
             </div>
-            <div></div>
+            <div>--(imagen de los sujetos)--</div>
         </div>
         <div>
-            
+            <p>Apoya lo bueno que hay en el mundo</p>
+            <div class="galeria">
+                <div class="galeria__item">
+                    <a href="#">
+                        <img src="img/mundo__item1.png">
+                        <div class="galeria__descrip">
+                            <p> Revive tus experiecnias de viaje </p>
+                            <p>Escribir una opinión</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="galeria__item">
+                    <a href="#">
+                        <img src="img/mundo__item2.png">
+                        <div class="galeria__descrip">
+                            <p> Ayuda a los restaurantes que deseas visitar </p>
+                            <p>Comprar una tarjeta de regalo</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="galeria__item">
+                    <a href="#">
+                        <img src="img/mundo__item3.png">
+                        <div class="galeria__descrip">
+                            <p> Explora el mundo desde tu hogar </p>
+                            <p>Reserva una experiencia virtual</p>
+                        </div>
+                    </a>
+                </div>
+            </div> 
+            <p>Sueña con tu próximo viaje</p>
+            <div class="galeria">
+                <div class="galeria__item">
+                    <a href="#">
+                        <div class="galeria__save">
+                            <i class="far fa-heart"></i>
+                        </div>
+                        <div>--(imagen)--</div>
+                        <div class="galeria__descrip">
+                            <p> Nueva York, Estado de Nueva York </p>
+                        </div>
+                    </a>
+                </div>
+                <div class="galeria__item">
+                    <a href="#">
+                        <div class="galeria__save">
+                            <i class="far fa-heart"></i>
+                        </div>
+                        <div>--(imagen)--</div>
+                        <div class="galeria__descrip">
+                            <p> Singapur, Singapur </p>
+                        </div>
+                    </a>
+                </div>
+                <div class="galeria__item">
+                    <a href="#">
+                        <div class="galeria__save">
+                            <i class="far fa-heart"></i>
+                        </div>
+                        <div>--(imagen)--</div>
+                        <div class="galeria__descrip">
+                            <p> Roma, Italia </p>
+                        </div>
+                    </a>
+                </div>
+                <div class="galeria__item">
+                    <a href="#">
+                        <div class="galeria__save">
+                            <i class="far fa-heart"></i>
+                        </div>
+                        <div>--(imagen)--</div>
+                        <div class="galeria__descrip">
+                            <p> Paris, Francia </p>
+                        </div>
+                    </a>
+                </div>
+                <div class="galeria__item">
+                    <a href="#">
+                        <div class="galeria__save">
+                            <i class="far fa-heart"></i>
+                        </div>
+                        <div>--(imagen)--</div>
+                        <div class="galeria__descrip">
+                            <p> Barcelona, España </p>
+                        </div>
+                    </a>
+                </div>
+                <div class="galeria__item">
+                    <a href="#">
+                        <div class="galeria__save">
+                            <i class="far fa-heart"></i>
+                        </div>
+                        <div>--(imagen)--</div>
+                        <div class="galeria__descrip">
+                            <p> Tokyo, Japón </p>
+                        </div>
+                    </a>
+                </div>
+                <div class="galeria__item">
+                    <a href="#">
+                        <div class="galeria__save">
+                            <i class="far fa-heart"></i>
+                        </div>
+                        <div>--(imagen)--</div>
+                        <div class="galeria__descrip">
+                            <p> Londres, UK </p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div>
+                <div>--imagen de fondo--
+                    <img src="img/logo__premios.png">
+                    <p>Premios Travellers' Choice 2020</p>
+                    <a href="">Ver los ganadores</a>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
