--- a/index.html
+++ b/index.html
@@ -7,47 +7,39 @@
     <link href="estilo.css" rel="stylesheet" type="text/css" >
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
-
-        <button class="drop-button">Dropdown</button>
-        <ul class="dropdown-content">
-            <li><a href="a">Link 1</a></li>
-            <li><a href="b">Link 2</a></li>
-            <li><a href="c">Link 3</a></li>
-        </ul>
-        
 <body class="body">
     <header class="header">
         <button class="header__button" name="button"> <i class="fas fa-list fa-2x"></i> </button>
         <nav class="nav">
-            <ul class="nav__list">
-                <a class="nav__login" href="#">Iniciar sesión</a>
-                <li class="nav__item"><p class="nav__text">Publicar</p>
-                    <ul class="nav__list list--second">
-                        <li class="nav__list list--second"><a class="nav__link nav__link--second" href="#">Escribir una opinión</a></li>
-                        <li class="nav__list list--second"><a class="nav__link nav__link--second" href="#">Publicas fotos</a></li>
-                    </ul>
-                </li>
-                <li class="nav__item"><a class="nav__link" href="#">Alertas</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">Viajes</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">Reservaciones</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">Hoteles</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">Qué hacer</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">Restaurantes</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">Vuelos</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">Rentas de vacaciones</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">Compras</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">Paquetes de Vacaciones</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">Cruceros</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">Alquiler de autos</a></li>
-                <li class="nav__item"><p class="nav__text">Más</p>
-                    <ul class="nav__list list--third">
-                        <li class="nav__list list--third"><a class="nav__link nav__link--third" href="#">Foro de viajes</a></li>
-                        <li class="nav__item nav__item--third"><a class="nav__link nav__link--third" href="#">Aerolineas</a></li>
-                        <li class="nav__item nav__item--third"><a class="nav__link nav__link--third" href="#">Lo mejor del 2020</a></li>
-                        <li class="nav__item nav__item--third"><a class="nav__link nav__link--third" href="#">Centro de ayuda</a></li>
-                    </ul>
-                </li>
-            </ul>
+            <a class="nav__login" href="#">Iniciar sesión</a>
+            <div>
+                <button class="nav__button" name="button">Publicar</button>
+                <ul class="nav__list">
+                    <li class="nav__item"><a class="nav__link" href="#a">Escribir una opinión</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#b">Publicas fotos</a></li>
+                </ul>
+                <a class="nav__text" href="#">Alertas</a>
+                <a class="nav__text" href="#">Viajes</a>
+                <a class="nav__text" href="#">Reservaciones</a>  
+            </div>
+            <div>
+                <a class="nav__link" href="#">Hoteles</a>
+                <a class="nav__link" href="#">Qué hacer</a>
+                <a class="nav__link" href="#">Restaurantes</a>
+                <a class="nav__link" href="#">Vuelos</a>
+                <a class="nav__link" href="#">Rentas de vacaciones</a>
+                <a class="nav__link" href="#">Compras</a>
+                <a class="nav__link" href="#">Paquetes de Vacaciones</a>
+                <a class="nav__link" href="#">Cruceros</a>
+                <a class="nav__link" href="#">Alquiler de autos</a>
+                <button class="nav__button" name="button">Más</button>
+                <ul class="nav__list">
+                    <li class="nav__item"><a class="nav__link" href="#">Foro de viajes</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#">Aerolineas</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#">Lo mejor del 2020</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#">Centro de ayuda</a></li>
+                </ul>
+            </div>
         </nav>    
         <img class="header__img" src="img/logo.png">
         <a class="header__link" href="#"> <i class="fas fa-search fa-2x"></i> </a>  
