--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <li class="nav__item nav__item--main"><a class="nav__link" href="#">Restaurantes</a><i class="fas fa-utensils icono"></i></li>
                     <li class="nav__item nav__item--main"><a class="nav__link" href="#">Escribir&nbsp;una&nbsp;opinión</a><i class="far fa-edit icono"></i></li>
                     <li class="nav__item nav__item--main"><a class="nav__link" href="#">Foros&nbsp;de&nbsp;viajes</a><i class="fas fa-plane-departure icono"></i></li>
-                        <button class="nav__button--main" name="button"><a class="nav__link" href="#">Más</a><i class="fas fa-ellipsis-h icono"></i></button>
+                        <button class="nav__button--main nav__link" name="button">Más<i class="fas fa-ellipsis-h icono"></i></button>
                         <nav class="nav nav--button">
                             <p class="nav__text">Explora en Tripadvisor</p>
                             <ul class="nav__list">    
